[gd_scene load_steps=35 format=3 uid="uid://droxaj3t4kpdp"]

[ext_resource type="Script" uid="uid://chpcgny4y8gsf" path="res://object_scenes/player/state_machine.gd" id="1_1gb37"]
[ext_resource type="Texture2D" uid="uid://dc2sl33mt41mb" path="res://object_scenes/player/spriteSheet.png" id="1_7jlmo"]
[ext_resource type="Script" uid="uid://c3xwyudfgtxjf" path="res://object_scenes/player/player.gd" id="1_adcoq"]
[ext_resource type="Material" uid="uid://crnv777kkv3a" path="res://zeeg/materials/playerOutline.tres" id="3_feo5d"]
[ext_resource type="Script" uid="uid://3rs0ecw5hsd0" path="res://object_scenes/player/player_camera.gd" id="4_airh8"]
[ext_resource type="Texture2D" uid="uid://4bbfvrr6lkls" path="res://object_scenes/player/flame.png" id="5_s2p7l"]
[ext_resource type="Shader" uid="uid://c8ddtuke40k1f" path="res://object_scenes/player/canvasOutline.gdshader" id="6_gry15"]
[ext_resource type="Texture2D" uid="uid://b3pb1yip64xyw" path="res://object_scenes/player/orbParticle.png" id="7_feo5d"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3o8n5"]
atlas = ExtResource("5_s2p7l")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_gry15"]
atlas = ExtResource("5_s2p7l")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_feo5d"]
atlas = ExtResource("5_s2p7l")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_4eg0y"]
atlas = ExtResource("5_s2p7l")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_5lrx1"]
atlas = ExtResource("5_s2p7l")
region = Rect2(96, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_eho8v"]
atlas = ExtResource("5_s2p7l")
region = Rect2(120, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_v417t"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3o8n5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gry15")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_feo5d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4eg0y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5lrx1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eho8v")
}],
"loop": true,
"name": &"default",
"speed": 21.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1gb37"]
size = Vector2(8, 14)

[sub_resource type="Animation" id="Animation_airh8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_eho8v"]
resource_name = "crouch"
length = 0.1
step = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.001, 0.051, 0.077),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [20, 21, 22]
}

[sub_resource type="Animation" id="Animation_ow4g6"]
resource_name = "crouchToIdle"
length = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [20]
}

[sub_resource type="Animation" id="Animation_gry15"]
resource_name = "fall"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [13, 14, 15, 16]
}

[sub_resource type="Animation" id="Animation_4eg0y"]
resource_name = "fallInstant"
length = 0.1595
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [15, 16]
}

[sub_resource type="Animation" id="Animation_adcoq"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_3o8n5"]
resource_name = "jump"
length = 0.11
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [13]
}

[sub_resource type="Animation" id="Animation_s2p7l"]
resource_name = "run"
length = 0.4
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [5, 6, 7, 8, 9, 10, 11, 12]
}

[sub_resource type="Animation" id="Animation_feo5d"]
resource_name = "skid"
length = 0.2805
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [17]
}

[sub_resource type="Animation" id="Animation_v417t"]
resource_name = "slide"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [23]
}

[sub_resource type="Animation" id="Animation_uv5cw"]
resource_name = "slidetocrouch"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [21, 22]
}

[sub_resource type="Animation" id="Animation_5lrx1"]
resource_name = "wallSlide"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [18]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3o8n5"]
_data = {
&"RESET": SubResource("Animation_airh8"),
&"crouch": SubResource("Animation_eho8v"),
&"crouchToIdle": SubResource("Animation_ow4g6"),
&"fall": SubResource("Animation_gry15"),
&"fallInstant": SubResource("Animation_4eg0y"),
&"idle": SubResource("Animation_adcoq"),
&"jump": SubResource("Animation_3o8n5"),
&"run": SubResource("Animation_s2p7l"),
&"skid": SubResource("Animation_feo5d"),
&"slide": SubResource("Animation_v417t"),
&"slidetocrouch": SubResource("Animation_uv5cw"),
&"wallSlide": SubResource("Animation_5lrx1")
}

[sub_resource type="LabelSettings" id="LabelSettings_adcoq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_airh8"]
size = Vector2(4, 10)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4eg0y"]
shader = ExtResource("6_gry15")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/width = 1.0
shader_parameter/pattern = 2
shader_parameter/inside = true
shader_parameter/add_margins = false

[sub_resource type="Curve" id="Curve_gry15"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_feo5d"]
_data = [Vector2(0, 0.701242), 0.0, 0.0, 0, 0, Vector2(1, 0), -0.711112, 0.0, 0, 0]
point_count = 2

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("animationPlayer", "sprite")]
collision_layer = 2
floor_constant_speed = true
floor_snap_length = 4.0
script = ExtResource("1_adcoq")
animationPlayer = NodePath("AnimationPlayer")
sprite = NodePath("sprite/Sprite")
canJump = true

[node name="stateMachine" type="Node" parent="." node_paths=PackedStringArray("label", "flame", "chargingParticles", "blastParticles", "explodeParticles")]
script = ExtResource("1_1gb37")
label = NodePath("../StateLabel")
flame = NodePath("../sprite/flameSprite")
chargingParticles = NodePath("../CanvasGroup/chargin")
blastParticles = NodePath("../CanvasGroup/blast")
explodeParticles = NodePath("../CanvasGroup/explose")

[node name="sprite" type="CanvasGroup" parent="."]
material = ExtResource("3_feo5d")

[node name="Sprite" type="Sprite2D" parent="sprite"]
position = Vector2(0, 7)
texture = ExtResource("1_7jlmo")
offset = Vector2(0, -9)
hframes = 25
frame = 1

[node name="flameSprite" type="AnimatedSprite2D" parent="sprite"]
visible = false
modulate = Color(1, 1, 1, 0.760784)
position = Vector2(0, -3)
scale = Vector2(1.265, 1.265)
sprite_frames = SubResource("SpriteFrames_v417t")
frame_progress = 0.838039
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1gb37")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_3o8n5")
}
next/crouchToIdle = &"idle"

[node name="wallCasts" type="Node2D" parent="."]

[node name="floorDistance" type="RayCast2D" parent="wallCasts"]
position = Vector2(0, 5)
target_position = Vector2(0, 8)

[node name="left1" type="RayCast2D" parent="wallCasts"]
position = Vector2(3, -5)
target_position = Vector2(4, 0)

[node name="left2" type="RayCast2D" parent="wallCasts"]
position = Vector2(3, 6)
target_position = Vector2(4, 0)

[node name="right1" type="RayCast2D" parent="wallCasts"]
position = Vector2(-3, -5)
target_position = Vector2(-4, 0)

[node name="right2" type="RayCast2D" parent="wallCasts"]
position = Vector2(-3, 6)
target_position = Vector2(-4, 0)

[node name="SpeedLabel" type="Label" parent="."]
offset_left = -70.0
offset_top = -65.0
offset_right = 70.0
offset_bottom = -42.0
text = "0"
label_settings = SubResource("LabelSettings_adcoq")
horizontal_alignment = 1

[node name="StateLabel" type="Label" parent="."]
offset_left = -70.0
offset_top = -44.0
offset_right = 70.0
offset_bottom = -21.0
text = "penis"
label_settings = SubResource("LabelSettings_adcoq")
horizontal_alignment = 1

[node name="PlayerCamera" type="Camera2D" parent="."]
process_mode = 3
top_level = true
position = Vector2(320, 320)
script = ExtResource("4_airh8")

[node name="DeathDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathDetector"]
shape = SubResource("RectangleShape2D_airh8")

[node name="slopeCastDetector" type="RayCast2D" parent="."]
position = Vector2(0, 5)
target_position = Vector2(0, 14)

[node name="ceilingCollider" type="RayCast2D" parent="."]
position = Vector2(-3, 6)
target_position = Vector2(0, -12.5)

[node name="ceilingCollider2" type="RayCast2D" parent="."]
position = Vector2(3, 6)
target_position = Vector2(0, -12.5)

[node name="CanvasGroup" type="CanvasGroup" parent="."]
z_index = -1
material = SubResource("ShaderMaterial_4eg0y")

[node name="chargin" type="CPUParticles2D" parent="CanvasGroup"]
emitting = false
amount = 16
texture = ExtResource("7_feo5d")
emission_shape = 1
emission_sphere_radius = 32.0
gravity = Vector2(0, 0)
radial_accel_min = -100.0
radial_accel_max = -79.07
scale_amount_curve = SubResource("Curve_gry15")
color = Color(1, 1, 1, 0.203922)

[node name="blast" type="CPUParticles2D" parent="CanvasGroup"]
emitting = false
amount = 64
texture = ExtResource("7_feo5d")
preprocess = 1.1
emission_shape = 1
emission_sphere_radius = 1.0
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 3.65
initial_velocity_max = 9.05
radial_accel_min = 13.1
radial_accel_max = 100.0
tangential_accel_min = -0.45
tangential_accel_max = 0.4
scale_amount_curve = SubResource("Curve_gry15")
color = Color(1, 1, 1, 0.203922)

[node name="explose" type="CPUParticles2D" parent="CanvasGroup"]
emitting = false
amount = 16
texture = ExtResource("7_feo5d")
lifetime = 0.25
one_shot = true
explosiveness = 0.79
emission_shape = 1
emission_sphere_radius = 1.0
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_max = 139.54
scale_amount_curve = SubResource("Curve_feo5d")
color = Color(1, 1, 1, 0.203922)

[connection signal="body_entered" from="DeathDetector" to="." method="_on_death_detector_body_entered"]
